Movielist: Fix reports chart labels being cut off

--- a/apps/movielist/assets/css/_reports.scss
+++ b/apps/movielist/assets/css/_reports.scss
@@ -14,6 +14,10 @@
 
 #movies_per_month_chart {
 	margin-bottom: 2rem;
+
+	svg {
+		overflow: visible;
+	}
 }
 
 svg.ct-chart-line {
